$Id: History,v 1.7 2000-01-19 19:07:04 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

January 19, 00       G. Cosmo              geommng-V01-00-00

Syncronized file versioning with HEAD (several CVS headers changed
due to the recent migration for ISO C++)

January 19, 00       J. Allison

G4DrawVoxels.cc:

Assured GetSlice(slice_no) is called for slice_no < no_slices.

November 30, 99      G. Cosmo              geommng-V00-01-01a

G4DrawVoxels.cc:

Fixed initialization of (const G4VPhysicalVolume*) in method
GetAbsoluteTransformation(). Fix needed for NT/VC++ compiler.

November 09, 99      J. Apostolakis        geommng-V00-01-01

G4VPhysicalVolume:
  i) Made G4RotationMatrix G4VPhysicalVolume::GetObjectRotation() const
      non-inline and moved it to source file from inline file.
 ii) Added GetObjectRotationValue() method.
iii) Minimal changes of comments for Software Ref. Manual in header file

  [ Change i) caused problem with HP aCC compiler A.01.19.  Atlas 
     was patching the code to try to get around this, but this 
     resolution is much better ] 

March    17, 99      J. Apostolakis        geommng-01-00-02

G4AffineTransform.icc:  
 