@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VSolid.cc,v 1.3 1999-12-15 14:49:54 gunter Exp $
+// $Id: G4VSolid.cc,v 1.4 2000-04-11 16:18:15 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // class G4VSolid
@@ -21,6 +21,8 @@
 #include "G4SolidStore.hh"
 
 #include "G4VoxelLimits.hh"
+#include "G4AffineTransform.hh"
+#include "G4VisExtent.hh"
 
 // Constructor
 //  - Copies name
@@ -318,3 +320,20 @@ void G4VSolid::ClipPolygonToSimpleLimits(G4ThreeVectorList& pPolygon,
 
        G4DisplacedSolid* G4VSolid::GetDisplacedSolidPtr() 
 { return 0; } 
+
+G4VisExtent G4VSolid::GetExtent () const {
+  G4VisExtent extent;
+  G4VoxelLimits voxelLimits;  // Defaults to "infinite" limits.
+  G4AffineTransform affineTransform;
+  G4double vmin, vmax;
+  CalculateExtent(kXAxis,voxelLimits,affineTransform,vmin,vmax);
+  extent.SetXmin (vmin);
+  extent.SetXmax (vmax);
+  CalculateExtent(kYAxis,voxelLimits,affineTransform,vmin,vmax);
+  extent.SetYmin (vmin);
+  extent.SetYmax (vmax);
+  CalculateExtent(kZAxis,voxelLimits,affineTransform,vmin,vmax);
+  extent.SetZmin (vmin);
+  extent.SetZmax (vmax);
+  return extent;
+}
